VPP-22 added a sh script to initialize DHF5.0.2

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+#DHF stuff
+.java-version
+dhf/gradle-local.properties
+dhf/gradle.properties
+dhf/src/
+
