--- a/dhf/build.gradle
+++ b/dhf/build.gradle
@@ -5,3 +5,11 @@
       // Data Hub plugin
       id 'com.marklogic.ml-data-hub' version '5.0.2'
   }
+
+
+task copyDhfDistro(type: Copy) {
+    from "../dist_user/DHF/src/"
+    into "$buildDir/toArchive"
+}
+
+
