--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-json-ui-editor": "^1.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.4"
+    "@quasar/app": "^1.0.4",
+    "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
