--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "executiongraphfront",
-  "version": "0.0.1",
+  "name": "Data Hub - Visual Programming Plugin",
+  "version": "0.1.0",
   "description": "A Quasar Framework app",
   "productName": "executiongraphfront",
   "cordovaId": "",
