--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Data Hub - Visual Programming Plugin",
+  "name": "DataHubVisualProgrammingPlugin",
   "version": "0.1.0",
   "description": "A Quasar Framework app",
   "productName": "executiongraphfront",
@@ -20,7 +20,8 @@
     "vue-json-edit": "^1.2.0",
     "vue-json-editor": "^1.3.1",
     "vue-json-pretty": "^1.6.0",
-    "vue-json-ui-editor": "^1.0.0"
+    "vue-json-ui-editor": "^1.0.0",
+    "vue2-dropzone": "^3.6.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.1.2"
