VPP-53 now packaging backend resources and allowing the jar to deploy with a command line param --deployBackend=true

--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation 'commons-io:commons-io:2.5'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
