--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "DataHubVisualProgrammingPlugin",
   "version": "0.1.0",
   "description": "A Quasar Framework app",
-  "productName": "Visual Programming Plugin",
+  "productName": "Flowtilla",
   "cordovaId": "",
   "author": "epoilvet",
   "private": true,
