--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'com.marklogic.pipes'
 version = '0.8'
 sourceCompatibility = '1.8'
+bootJar.baseName = 'marklogic-pipes'
 
 repositories {
 	mavenCentral()
