--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.marklogic.pipes'
-version = '0.8.'
+version = '0.8'
 sourceCompatibility = '1.8'
 bootJar.archiveBaseName = 'marklogic-pipes'
 
