--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,7 @@ java-middle-tier/gradle/wrapper/gradle-wrapper.properties
 java-middle-tier/gradle
 java-middle-tier/.gradle
 
+#gren stuff
+.grenrc.yml
+CHANGELOG.md
 
