--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-edit-json": "^1.0.4",
     "vue-json-edit": "^1.2.0",
     "vue-json-pretty": "^1.6.0",
+    "vue-shortkey": "^3.1.7",
     "vue2-dropzone": "^3.6.0"
   },
   "devDependencies": {
