--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "@quasar/extras": "^1.3.3",
+    "autoprefixer": "^9.7.4",
     "axios": "^0.18.1",
     "file-saver": "^2.0.2",
     "litegraph.js": "^0.7.0",
