--- a/ml-backend/build.gradle
+++ b/ml-backend/build.gradle
@@ -47,6 +47,7 @@ if (project.hasProperty("myBintrayUser")) {
 		key = project.findProperty("myBintrayKey")
 		publications = ["mainModules"]
 		publish = true
+		override = true
 		pkg {
 			repo = "Maven"
 			name = "pipes"
