--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ java-middle-tier/.project
 java-middle-tier/.settings/
 java-middle-tier/src/test/resources/application.properties
 java-middle-tier/lib/
+ml-backend/.classpath
 
 #windows stuff
 gradle/
