--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-json-edit": "^1.2.0",
     "vue-json-pretty": "^1.6.0",
     "vue-shortkey": "^3.1.7",
-    "vue2-dropzone": "^3.6.0"
+    "vue2-dropzone": "^3.6.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@quasar/app": "^1.2.4"
