as per request, create an alias for bootJar --> buildPipes

--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -135,3 +135,7 @@ task runLocal(type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
   main = "com.marklogic.pipes.ui.Application"
 }
+
+task buildPipes {
+  dependsOn bootJar
+}
