updated pipes-entrypoing.sh to use a named MarkLogic host, changed example.env to reflect this, added more details to README.md

--- a/docker/pipes.yml
+++ b/docker/pipes.yml
@@ -7,6 +7,7 @@ services:
     pipes:
       image: pipes:v1
       environment:
+        - ML_HOST_NAME=${mlHostName}
         - SERVER_PORT=${pipesPort}
         - MARKLOGIC_ADMIN_USERNAME=${mlAdmin}
         - MARKLOGIC_ADMIN_PASSWORD=${mlPassword}
