--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ release/1.1-candidate ]
   pull_request:
-    branches: [ master ]
+    branches: [ release/1.1-candidate ]
 
 jobs:
   build:
