#207 initialized DHF 5.2 project for Customer360

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ gradle/
 java-middle-tier/gradle/wrapper/gradle-wrapper.properties
 java-middle-tier/gradle
 java-middle-tier/.gradle
+.tmp
 
 #gren stuff
 .grenrc.yml
