#210 added unit test

--- a/java-middle-tier/src/test/resources/test.properties
+++ b/java-middle-tier/src/test/resources/test.properties
@@ -4,16 +4,16 @@ server.port=8081
 # MarkLogic DHF settings
 # mlHost=qKyoeOXrx.stage.z.marklogicsvc.com
 mlHost=localhost
-mlStagingPort=8010
-mlUsername=pipes-admin
+mlStagingPort=8025
+mlUsername=admin
 # # mlPassword=8*ZW2Vxu@qQN
-mlPassword=pipes-admin
+mlPassword=admin
 
 # mlUsername=flow-developer
 # mlPassword=64%yq#QCeL@UI99L{lox
 
-mlModulesDatabase=data-hub-MODULES
-mlTestDatabase=data-hub-STAGING
+mlModulesDatabase=advanced-data-hub-MODULES
+mlTestDatabase=advanced-data-hub-STAGING
 mlAppServicesPort=8000
 mlAdminPort=8001
 mlManagePort=8002
