--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-json-pretty": "^1.6.0",
     "vue-shortkey": "^3.1.7",
     "vue2-dropzone": "^3.6.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.2.4"
