added docs folder; adapted .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ Examples/Advanced/src/main/ml-modules/services/vppBackendServices.sjs
 
 Examples/Customer360/src/main/ml-modules/root/custom-modules/pipes/
 Examples/Customer360/src/main/ml-modules/services/vppBackendServices.sjs
+
+Examples/Advanced/.classpath
+Examples/Advanced/.project
+Examples/Advanced/.settings/
