--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 
 # Where things are
-repository: marklogic-community/envision
+repository: marklogic-community/pipes
 source:      .
 destination: ./_site
 plugins_dir:     ./_plugins
@@ -57,7 +57,7 @@ excerpt_separator: "\n\n"
 detach:  false
 port:    4000
 host:    127.0.0.1
-baseurl: "/envision" # does not include hostname
+baseurl: "/pipes" # does not include hostname
 
 # Outputting
 permalink:     /:title.html
