#248 better messaging about what's going on

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ Examples/Advanced/src/main/ml-modules/services/vppBackendServices.sjs
 
 Examples/Customer360/src/main/ml-modules/root/custom-modules/pipes/
 Examples/Customer360/src/main/ml-modules/services/vppBackendServices.sjs
+Examples/Customer360/.classpath
+Examples/Customer360/.settings/org.eclipse.buildship.core.prefs
 
 Examples/Advanced/gradle-local.properties
 Examples/Advanced/.classpath
