--- a/_data/sidenav.yml
+++ b/_data/sidenav.yml
@@ -13,7 +13,9 @@ main:
         { url: '/how-to-use#source-blocks', text: 'Create source data blocks' },
         { url: '/how-to-use#map-values', text: 'Mapping values' },
         { url: '/how-to-use#custom-uris', text: 'Create custom URIs' },
-        { url: '/how-to-use#1-to-many', text: '1-to-many Mapping' }
+        { url: '/how-to-use#1-to-many', text: '1-to-many Mapping' },
+        { url: '/how-to-use#save-custom-step', text: 'Export the custom step' },
+        { url: '/how-to-use#run-custom-step', text: 'Run the custom step' }
        ]
       }
   - { url: '/custom-blocks/', text: 'How to create and use custom blocks' }
