updating the build script with --modern for quasar; added gradle.properties for building ml-bundle

--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -74,7 +74,7 @@ task runQuasarBuild(type:Exec) {
     commandLine 'cmd', '/c', 'quasar build'
   } else {
     executable "quasar"
-    args "build"
+    args 'build','--modern'
   }
 
   doLast {
