#266 array block now has a widget to control the number of inputs

--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -172,7 +172,7 @@ task runQuasarDev(type:Exec) {
     commandLine 'cmd', '/c', 'quasar dev;'
   } else {
     executable "quasar"
-    args "dev"
+    args "dev", "--modern"
   }
 
   doLast {
